components/_side-panel.scss
$side-panel-default-settings: (
  size: (
    small: 100%,
    medium: 45em,
    large: 75em,
    xlarge: 90em,
    xxlarge: 120em
  ),

  scaled-ratio: (
    small: 1,
    medium: 1,
    large: .5,
    xlarge: .5,
    xxlarge: .5
  ),

  actions-bar: (
    background-color: #e1e5ea,
    button-size: 35px,
    height: rem-calc(60)
  ),

  footer-bar: (
    height: rem-calc(90)
  ),

  actions: (
    navigation: (
      previous: angle-left,
      next: angle-right
    )
  )
);

@if global-variable-exists(side-panel) {
  $side-panel: map-merge-settings($side-panel-default-settings, $side-panel);
} @else {
  $side-panel: $side-panel-default-settings;
}

$include-html-paint-side-panel: true !default;

@function side-panel-settings($setting, $property: null) {
  @if $property {
    @return map-get(map-get($side-panel, $setting), $property),
  } @else {
    @return map-get($side-panel, $setting)
  }
}

@mixin side-panel-size($size: large, $scaled: false) {
  $width: side-panel-settings(size, $size);

  @if $scaled {
    $ratio: side-panel-settings(scaled-ratio, $size);
    $width: "calc(#{$width} * #{$ratio})";
  }

  width: #{$width};
}

@mixin side-panel($overlay: true, $scaled: false) {
  @if $overlay {
    @include overlay($position: fixed, $z-index: 200);
  }

  &.active {
    > div:first-child {
      transform: translate(0, 0);
    }

    &.nested {
      > div {
        transform: translate(0, 0);
      }

      > div:first-child {
        transform: translate(-100%, 0);
      }
    }

    header {
      top: 0;
    }
  }

  &.has-footer {
    > div > .content {
      bottom: side-panel-settings(footer-bar, height);
    }
  }

  > div {
    background-color: $white;
    box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, .125);
    height: 100%;
    overflow: hidden;
    position: absolute;
    right: 0;
    top: 0;
    transform: translate(100%, 0);
    transition: transform $global-transition-duration $global-transition-easing;

    &:first-child {
      z-index: 1;
    }

    > header {
      @include side-panel-header;

      .actions {
        @include side-panel-header-actions;
      }
    }

    > .content {
      bottom: 0;
      left: 0;
      overflow-y: auto;
      position: absolute;
      right: 0;
      top: side-panel-settings(actions-bar, height);
    }

    > footer {
      border-top: solid 1px $global-section-border-color;
      bottom: 0;
      height: side-panel-settings(footer-bar, height);
      left: 0;
      line-height: side-panel-settings(footer-bar, height);
      margin: 0;
      padding: 0;
      position: absolute;
      right: 0;

      .actions {
        background-color: transparent;
        border: 0 !important;
        margin: 0 !important;
        padding: 0 $column-gutter !important;
      }
    }

    @media #{$small-only} {
      @include side-panel-size(small, $scaled);
    }

    @media #{$medium-only} {
      @include side-panel-size(medium, $scaled);
    }

    @media #{$large-only} {
      @include side-panel-size(large, $scaled);
    }

    @media #{$xlarge-only} {
      @include side-panel-size(xlarge, $scaled);
    }

    @media #{$xxlarge-up} {
      @include side-panel-size(xxlarge, $scaled);
    }
  }
}

@mixin side-panel-header {
  @extend %grid-row;

  background-color: side-panel-settings(actions-bar, background-color);
  height: side-panel-settings(actions-bar, height);
  line-height: side-panel-settings(actions-bar, height);
  min-height: side-panel-settings(actions-bar, height);
  top: -#{side-panel-settings(actions-bar, height)};
  transition: top $global-transition-duration $global-transition-duration;
  padding: 0 $column-gutter;
  position: absolute;
}

@mixin side-panel-header-actions {
  $side-panel-actions: side-panel-settings(actions);

  > .content {
    @extend %grid-column-10;

    padding: 0 !important;

    > ul {
      @extend %button-group;

      line-height: inherit !important;

      > li {
        float: left;
        margin: 0 !important;
      }
    }
  }

  .close {
    @extend %grid-column-2;

    padding: 0 !important;
    text-align: right;

    > button {
      @include button-icon(close);

      border-color: $global-section-border-color;
    }
  }

  button {
    line-height: side-panel-settings(actions-bar, height);

    &:before {
      font-size: $h3-font-size;
      line-height: side-panel-settings(actions-bar, button-size) !important;
      width: side-panel-settings(actions-bar, button-size) !important;
    }
  }

  @each $action-group, $actions in $side-panel-actions {
    .#{$action-group}-actions {
      @each $action, $icon in $actions {
        .#{$action} {
          @include button-icon($icon);
        }
      }
    }
  }
}

@include exports('paint-side-panel') {
  @if $include-html-paint-side-panel {
    .side-panel {
      @include side-panel;
    }
  }
}

